cabal-version:       3.0
name:                pricing-experiments
version:             0.1.0.0
license-file:        LICENSE
author:              Vladimir Shabanov
maintainer:          dev@vshabanov.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable Test
  main-is:
    Main.hs
  other-modules:
    Analytic
    Market
    Random
    Symbolic
    Tenor
    Tridiag
  -- other-extensions:
  build-depends:
    QuickCheck >= 2.14.2,
    ad,
    array >= 0.5.3.0,
    async,
    base >=4.12,
    bytestring >= 0.12.0.2,
    comfort-array,
    containers >= 0.6.0.1,
    criterion,
    deepseq >= 1.5.0.0,
    erf,
    ghc-bignum >= 1.3,
    ghc-prim >= 0.11.0,
    gnuplot,
    hmatrix,
    hmatrix-gsl,
    mtl >= 2.3.1,
    mwc-random,
    pretty-show >= 1.10,
    process >= 1.6.18.0,
    random >= 1.2.0,
    recursion-schemes,
    reflection >= 2.1.8,
    split >= 0.2.5,
    splitmix,
    text >= 1.2.4.1,
    unordered-containers >= 0.2.13.0,
    vector,
  default-language:
    GHC2021
    -- GHC2024 shows "rigid variable ..." errors
  default-extensions:
    BangPatterns
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ViewPatterns
