cabal-version:       3.0
name:                pricing-experiments
version:             0.1.0.0
license-file:        LICENSE
author:              Vladimir Shabanov
maintainer:          dev@vshabanov.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

common language-settings
  default-language:
    GHC2024
  default-extensions:
    OverloadedStrings
    RecordWildCards
    ViewPatterns
  ghc-options: -Wunused-imports
               -- -Wall
  -- other-extensions:

common symbolic-depends
  build-depends:
    ad,
    array,
    base,
    containers,
    deepseq,
    erf,
    ghc-bignum,
    mtl,
    parsec,
    reflection,

library symbolic
  import: language-settings
  import: symbolic-depends
  hs-source-dirs:
    symbolic/src
  exposed-modules:
    Number
    StructuralComparison
    Symbolic
    Symbolic.Matrix
    Unique
  other-modules:
    Symbolic.Internal
  ghc-options: -Wincomplete-patterns
               -- -fno-unoptimized-core-for-interpreter

test-suite test-symbolic
  import:  language-settings
  import:  symbolic-depends
  type:    exitcode-stdio-1.0
  main-is: Symbolic/Test.hs
  hs-source-dirs:
    symbolic/src
  other-modules:
    Number
    StructuralComparison
    Symbolic
    Symbolic.Internal
    Unique
  build-depends:
    QuickCheck

executable Test
  import: language-settings
  import: symbolic-depends
  hs-source-dirs:
    src
--     symbolic/src
    -- ^ uncomment to load all files in the repl instead of using the library
  main-is:
    Main.hs
  other-modules:
    Analytic
    Analytic.Market
    Analytic.Pure
    Bump
    Bump.Market
    Bump.Pure
    FreeVars
    Gnuplot
    Market
    NLFitting
    Percent
    Random
    Solving
    Spline
    Tenor
    TestData
    Traversables
    Tridiag
    VolSurface
  build-depends:
    QuickCheck >= 2.14.2,
    async,
    bytestring >= 0.12.0.2,
    criterion,
    extra,
    free,
    ghc-bignum >= 1.3,
    ghc-prim >= 0.11.0,
    hmatrix,
    hmatrix-gsl,
    mwc-random,
    pretty-show >= 1.10,
    process >= 1.6.18.0,
    random >= 1.2.0,
    recursion-schemes,
    split >= 0.2.5,
    splitmix,
    template-haskell,
    text >= 1.2.4.1,
    uglymemo,
    unordered-containers >= 0.2.13.0,
    vector,
    symbolic,
  ghc-options: -rtsopts -with-rtsopts "-M8G"
  -- -threaded
  -- ^ slower GC, no par GC
